--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
     "chartist": "0.11.4",
+    "dayspan-vuetify": "^0.4.0",
     "eslint-plugin-prettier": "^3.4.0",
     "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "4.14.1",
